style.less: fix column menu visibility

--- a/js/webui/src/style.less
+++ b/js/webui/src/style.less
@@ -423,6 +423,10 @@ body {
     .no-text-overflow();
 }
 
+.dtable-column-header.dropdown {
+    overflow: visible;
+}
+
 .dtable-column-header-text {
     font-weight: bold;
 }
